# wTools

./: .gitignore  .gitpod.yml  Cargo.toml  License  Makefile  Readme.md  bash.exe.stackdump  debug  rustfmt.toml
doc/: DevEnvForWindows.md  (+1 more)
module/alias/cargo_will/: Cargo.toml  Readme.md
module/alias/cargo_will/src/: lib.rs
module/alias/cargo_will/tests/: willbe_tests.rs
module/alias/file_tools/: Cargo.toml  Readme.md
module/alias/file_tools/src/: lib.rs
module/alias/fundamental_data_type/: Cargo.toml  Readme.md
module/alias/fundamental_data_type/src/: lib.rs
module/alias/fundamental_data_type/tests/: tests.rs
module/alias/instance_of/: Cargo.toml  Readme.md
module/alias/instance_of/examples/instance_of_trivial_sample/: Cargo.toml
module/alias/instance_of/examples/instance_of_trivial_sample/src/: main.rs
module/alias/instance_of/src/typing/: implements_lib.rs  inspect_type_lib.rs  instance_of_lib.rs  is_slice_lib.rs  mod.rs  typing.rs  typing_tools_lib.rs
module/alias/instance_of/tests/: instance_of_tests.rs
module/alias/multilayer/: Cargo.toml  Readme.md
module/alias/multilayer/src/meta/mod_interface/front/: multilayer_lib.rs
module/alias/multilayer/tests/: multilayer_tests.rs
module/alias/proc_macro_tools/: Cargo.toml  Readme.md
module/alias/proc_macro_tools/examples/: proc_macro_tools_trivial.rs
module/alias/proc_macro_tools/src/: lib.rs
module/alias/proc_macro_tools/tests/: proc_macro_tool_tests.rs
module/alias/proper_tools/: Cargo.toml  Readme.md
module/alias/proper_tools/src/: lib.rs
module/alias/proper_tools/tests/: smoke_test.rs
module/alias/werror/: Cargo.toml  Readme.md
module/alias/werror/examples/: werror_tools_trivial.rs
module/alias/werror/src/: lib.rs
module/alias/werror/tests/: werror_tests.rs
module/alias/willbe2/: Cargo.toml  Readme.md
module/alias/willbe2/src/: lib.rs  main.rs
module/alias/winterval/: Cargo.toml  Readme.md
module/alias/winterval/examples/: winterval_more.rs  winterval_non_iterable.rs  winterval_trivial.rs
module/alias/winterval/src/: lib.rs
module/alias/winterval/tests/: interval_tests.rs
module/alias/wproc_macro/: Cargo.toml  Readme.md
module/alias/wproc_macro/src/: lib.rs
module/alias/wproc_macro/tests/: wproc_macro_tests.rs
module/alias/wstring_tools/: Cargo.toml  Readme.md
module/alias/wstring_tools/examples/: wstring_toolst_trivial_sample.rs
module/alias/wstring_tools/src/: lib.rs
module/alias/wstring_tools/tests/: wstring_tools_tests.rs
module/alias/wtest/: Cargo.toml  License  Readme.md
module/alias/wtest/examples/: wtest_trivial_sample.rs
module/alias/wtest/src/test/: lib.rs  main.rs
module/alias/wtest/src/test/commands/: init.rs  mod.rs  smoke.rs
module/alias/wtest/tests/: wtest_basic_tests.rs
module/alias/wtest_basic/: Cargo.toml  Readme.md
module/alias/wtest_basic/examples/wtest_basic_trivial_sample/: Cargo.toml  Readme.md
module/alias/wtest_basic/examples/wtest_basic_trivial_sample/test/: trivial_test.rs
module/alias/wtest_basic/src/_blank/: standard_lib.rs
module/alias/wtest_basic/src/test/: wtest_basic_lib.rs
module/alias/wtest_basic/src/test/basic/: helper.rs  mod.rs
module/alias/wtest_basic/tests/: smoke_test.rs  wtest_basic_tests.rs
module/blank/draw_lang/: Cargo.toml
module/blank/draw_lang/src/: lib.rs
module/blank/draw_lang/tests/: tests.rs
module/blank/draw_lang/tests/inc/: basic_test.rs
module/blank/drawboard/: Cargo.toml  Readme.md
module/blank/drawboard/src/: lib.rs
module/blank/drawboard/tests/: tests.rs
module/blank/drawql/: Cargo.toml  Readme.md
module/blank/drawql/src/: lib.rs
module/blank/drawql/tests/: tests.rs
module/blank/graphtools/: Cargo.toml  Readme.md
module/blank/mindx12/: Cargo.toml  Readme.md
module/blank/mindx12/tests/: tests.rs
module/blank/minmetal/: Cargo.toml  Readme.md
module/blank/minmetal/tests/: tests.rs
module/blank/minvulkan/: Cargo.toml  Readme.md
module/blank/minvulkan/tests/: tests.rs
module/blank/minwebgpu/: Cargo.toml  Readme.md
module/blank/minwebgpu/tests/: tests.rs
module/blank/paths_tools/: Cargo.toml  Readme.md
module/blank/paths_tools/src/: lib.rs
module/blank/paths_tools/tests/: tests.rs
module/blank/proper_path_tools/: Cargo.toml  Readme.md
module/blank/proper_path_tools/src/: lib.rs
module/blank/proper_path_tools/tests/: tests.rs
module/blank/second_brain/: Cargo.toml  Readme.md
module/blank/second_brain/src/: lib.rs
module/blank/second_brain/tests/: tests.rs
module/blank/willbe_old/: Cargo.toml  Readme.md
module/blank/willbe_old/src/willbe_old/: files.rs  willbe_entry.rs  willbe_lib.rs
module/blank/willbe_old/src/willbe_old/commands/: each.rs  end.rs  init.rs  mod.rs
module/blank/willbe_old/src/willbe_old/commands/package/: info.rs  mod.rs  publish.rs
module/blank/willbe_old/src/willbe_old/core/: iterators.rs  mod.rs
module/blank/willbe_old/src/willbe_old/core/entities/: mod.rs  utility.rs  workspace.rs
module/blank/willbe_old/src/willbe_old/core/entities/package/: metadata.rs  mod.rs  package.rs  verification.rs
module/blank/willbe_old/tests/: smoke_test.rs
module/blank/willbe_old/tests/willbe_old/: utility.rs  willbe_test.rs
module/blank/willbe_old/tests/willbe_old/_asset/package/: Cargo.toml
module/blank/willbe_old/tests/willbe_old/_asset/package_no_verified/: Cargo.toml
module/blank/willbe_old/tests/willbe_old/_asset/workspaces/: Cargo.toml
module/blank/willbe_old/tests/willbe_old/tests/: from.rs  iterator.rs  metadata.rs  mod.rs  verification.rs
module/blank/willbe_old/tests/willbe_old/tests/integration/: each.rs  info.rs  mod.rs
module/blank/willbe_old/tests/willbe_old/tests/ordering/: mod.rs  through_workspaces.rs  workspace.rs
module/blank/wlang/: Cargo.toml  Readme.md
module/blank/wlang/src/: standard_lib.rs
module/blank/wlang/tests/: smoke_test.rs
module/core/async_from/: Cargo.toml  Readme.md
module/core/async_from/src/: lib.rs
module/core/async_from/tests/: tests.rs
module/core/async_from/tests/inc/: basic_test.rs  mod.rs
step/: Cargo.toml  eol.sh  pivot.sh  replace.censor
(+2153 files in other folders)
