[workspace]
resolver = "2"
members = [
  "module/alias/*",
  "module/blank/*",
  "module/core/*",
  "module/move/*",
  "module/test/*",
  "step",
]
exclude = [
  "-*",
  "module/move/_video_experiment",
]
# default-members = [ "module/core/wtools" ]

[workspace.metadata]
branches = [ "master", "alpha" ]
master_branch = "master"
workspace_name = "wTools"
repo_url = "https://github.com/Wandalen/wTools"
discord_url = "https://discord.gg/m3YfbXpUUY"

# [metadata.cargo-suppress-warnings]
# unused-manifest-key = true


[workspace.lints.rust]
# Source :: https://github.com/obox-systems/conventions/blob/master/code_style.md#lints-and-warnings

# Denies non-idiomatic code for Rust 2018 edition.
rust_2018_idioms = "deny"
# Denies using features that may break in future Rust versions.
future_incompatible = "deny"
# Warns if public items lack documentation.
missing_docs = "warn"
# Warns for public types not implementing Debug.
missing_debug_implementations = "warn"
# Denies all unsafe code usage.
unsafe-code = "warn"

[workspace.lints.clippy]
# Denies restrictive lints, limiting certain language features/patterns.
restriction = "warn"
# Denies pedantic lints, enforcing strict coding styles and conventions.
pedantic = "warn"
# Denies undocumented unsafe blocks.
undocumented_unsafe_blocks = "deny"
# xxx : check
# Warns if core could be used instead of std, but didn't
std_instead_of_core = "warn"
# Warns if alloc could be used instead of std, but didn't
std_instead_of_alloc = "warn"
# xxx : document
single_call_fn = "allow"
inline_always = "allow"
module_name_repetitions = "allow"
absolute_paths = "allow"

## top level

[workspace.dependencies.wtools]
version = "~0.2.0"
path = "module/core/wtools"
default-features = false

[workspace.dependencies.non_std]
version = "~0.1.4"
path = "module/alias/non_std"

[workspace.dependencies.std_tools]
version = "~0.1.4"
path = "module/alias/std_tools"

[workspace.dependencies.std_x]
version = "~0.1.4"
path = "module/alias/std_x"


## data_type

[workspace.dependencies.data_type]
version = "~0.8.0"
path = "module/core/data_type"
default-features = false

# [workspace.dependencies.type_constructor_meta]
# version = "~0.2.0"
# path = "module/core/type_constructor_meta"
# default-features = false

# [workspace.dependencies.type_constructor_make_meta]
# version = "~0.2.0"
# path = "module/core/type_constructor_make_meta"
#
# [workspace.dependencies.type_constructor_derive_pair_meta]
# version = "~0.1.0"
# path = "module/core/type_constructor_derive_pair_meta"

[workspace.dependencies.interval_adapter]
version = "~0.22.0"
path = "module/core/interval_adapter"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.winterval]
version = "~0.3.0"
path = "module/alias/winterval"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.collection_tools]
version = "~0.10.0"
path = "module/core/collection_tools"
default-features = false


## derive

[workspace.dependencies.derive_tools]
version = "~0.25.0"
path = "module/core/derive_tools"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.derive_tools_meta]
version = "~0.24.0"
path = "module/core/derive_tools_meta"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.reflect_tools]
version = "~0.2.0"
path = "module/core/reflect_tools"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.reflect_tools_meta]
version = "~0.2.0"
path = "module/core/reflect_tools_meta"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.format_tools]
version = "~0.1.0"
path = "module/core/format_tools"
default-features = false
features = [ "enabled" ]
# xxx : remove features, maybe

# [workspace.dependencies.type_constructor]
# version = "~0.3.0"
# path = "module/core/type_constructor"
# default-features = false

[workspace.dependencies.fundamental_data_type]
version = "~0.2.0"
path = "module/alias/fundamental_data_type"
default-features = false

[workspace.dependencies.variadic_from]
version = "~0.20.0"
path = "module/core/variadic_from"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.clone_dyn]
version = "~0.21.0"
path = "module/core/clone_dyn"
default-features = false
features = [ "enabled" ]

[workspace.dependencies.clone_dyn_meta]
version = "~0.21.0"
path = "module/core/clone_dyn_meta"
features = [ "enabled" ]

[workspace.dependencies.clone_dyn_types]
version = "~0.21.0"
path = "module/core/clone_dyn_types"
default-features = false
features = [ "enabled" ]


## mem

[workspace.dependencies.mem_tools]
version = "~0.6.0"
path = "module/core/mem_tools"
default-features = false


## diagnostics

[workspace.dependencies.diagnostics_tools]
version = "~0.8.0"
path = "module/core/diagnostics_tools"
default-features = false


## iter

[workspace.dependencies.iter_tools]
version = "~0.19.0"
path = "module/core/iter_tools"
default-features = false


## meta

[workspace.dependencies.meta_tools]
version = "~0.10.0"
path = "module/core/meta_tools"
default-features = false

[workspace.dependencies.for_each]
version = "~0.8.0"
path = "module/core/for_each"
default-features = false

[workspace.dependencies.former]
version = "~2.6.0"
path = "module/core/former"
default-features = false

# [workspace.dependencies.former_stable]
# package = "former"
# version = "=2.2.0"
# default-features = false

[workspace.dependencies.former_meta]
version = "~2.6.0"
path = "module/core/former_meta"
default-features = false

[workspace.dependencies.former_types]
version = "~2.6.0"
path = "module/core/former_types"
default-features = false

[workspace.dependencies.impls_index]
version = "~0.7.0"
path = "module/core/impls_index"
default-features = false

[workspace.dependencies.impls_index_meta]
version = "~0.7.0"
path = "module/core/impls_index_meta"

[workspace.dependencies.mod_interface]
version = "~0.22.0"
path = "module/core/mod_interface"
default-features = false

[workspace.dependencies.mod_interface_meta]
version = "~0.22.0"
path = "module/core/mod_interface_meta"
default-features = false

[workspace.dependencies.multilayer]
version = "~0.1.3"
path = "module/alias/multilayer"
default-features = false

# [workspace.dependencies.woptions]
# version = "~0.1.4"
# path = "module/core/woptions"
# default-features = false
#
# [workspace.dependencies.woptions_meta]
# version = "~0.1.4"
# path = "module/core/woptions_meta"
#
# [workspace.dependencies.woptions_runtime]
# version = "~0.1.4"
# path = "module/core/woptions_runtime"


## macro tools

[workspace.dependencies.macro_tools]
version = "~0.36.0"
path = "module/core/macro_tools"
default-features = false

[workspace.dependencies.proc_macro_tools]
version = "~0.2.0"
path = "module/alias/proc_macro_tools"
default-features = false

[workspace.dependencies.wproc_macro]
version = "~0.1.1"
path = "module/alias/wproc_macro"
default-features = false


## time

[workspace.dependencies.time_tools]
version = "~0.2.0"
path = "module/core/time_tools"
default-features = false


## typing

[workspace.dependencies.typing_tools]
version = "~0.8.0"
path = "module/core/typing_tools"
default-features = false

[workspace.dependencies.implements]
version = "~0.8.0"
path = "module/core/implements"
default-features = false

[workspace.dependencies.instance_of]
version = "~0.2.0"
path = "module/alias/instance_of"
default-features = false

[workspace.dependencies.inspect_type]
version = "~0.10.0"
path = "module/core/inspect_type"
default-features = false

[workspace.dependencies.is_slice]
version = "~0.9.0"
path = "module/core/is_slice"
default-features = false


## error

[workspace.dependencies.error_tools]
version = "~0.15.0"
path = "module/core/error_tools"
default-features = false

[workspace.dependencies.werror]
version = "~0.4.0"
path = "module/alias/werror"


## string tools

[workspace.dependencies.strs_tools]
version = "~0.15.0"
path = "module/core/strs_tools"
default-features = false

[workspace.dependencies.wstring_tools]
version = "~0.2.0"
path = "module/alias/wstring_tools"


## fs tools / path tools

[workspace.dependencies.fs_tools]
version = "~0.1.0"
path = "module/core/fs_tools"
default-features = false

[workspace.dependencies.file_tools]
version = "~0.1.0"
path = "module/alias/file_tools"
default-features = false

[workspace.dependencies.proper_path_tools]
version = "~0.8.0"
path = "module/core/proper_path_tools"
default-features = false


## process tools

[workspace.dependencies.process_tools]
version = "~0.7.0"
path = "module/core/process_tools"
default-features = false

[workspace.dependencies.process_tools_published]
package = "process_tools"
version = "~0.2.0"
default-features = false


## test

[workspace.dependencies.wtest]
version = "~0.4.0"
path = "module/alias/wtest"

[workspace.dependencies.test_tools]
version = "~0.9.0"
path = "module/core/test_tools"

[workspace.dependencies.wtest_basic]
version = "~0.4.0"
path = "module/alias/wtest_basic"



## graphs tools

[workspace.dependencies.graphs_tools]
version = "~0.2.0"
path = "module/move/graphs_tools"
default-features = false

# [workspace.dependencies.automata_tools]
# version = "~0.2.0"
# path = "module/move/automata_tools"
# default-features = false
#
# [workspace.dependencies.wautomata]
# version = "~0.2.0"
# path = "module/alias/wautomata"
# default-features = false


## ca

[workspace.dependencies.wca]
version = "~0.19.0"
path = "module/move/wca"


## censor

[workspace.dependencies.wcensor]
version = "~0.1.1"
path = "module/move/wcensor"


## willbe

[workspace.dependencies.willbe]
version = "~0.12.0"
path = "module/move/willbe"


## lang

[workspace.dependencies.wlang]
version = "~0.1.0"
path = "module/move/wlang"


## publisher

[workspace.dependencies.wpublisher]
version = "~0.2.0"
path = "module/move/wpublisher_xxx"


## plot

[workspace.dependencies.wplot]
version = "~0.2.0"
path = "module/move/wplot"

[workspace.dependencies.plot_interface]
version = "~0.1.3"
path = "module/move/plot_interface"


## etc

[workspace.dependencies.sqlx_query]
version = "~0.2.0"
path = "module/move/sqlx_query"

[workspace.dependencies.deterministic_rand]
version = "~0.5.0"
path = "module/move/deterministic_rand"

[workspace.dependencies.crates_tools]
version = "~0.11.0"
path = "module/move/crates_tools"


## steps

[workspace.dependencies.integration_test]
path = "module/step/integration_test"
default-features = true

[workspace.dependencies.smoke_test]
path = "module/step/smoke_test"
default-features = true


## test experimental

[workspace.dependencies.test_experimental_a]
version = "~0.5.0"
path = "module/test/a"
default-features = true

[workspace.dependencies.test_experimental_b]
version = "~0.3.0"
path = "module/test/b"
default-features = true

[workspace.dependencies.test_experimental_c]
version = "~0.3.0"
path = "module/test/c"
default-features = true
