[package]
name = "cargo_will"
version = "0.3.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/cargo-will"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/cargo-will"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/cargo-will"
description = """
Utility to publish multi-crate and multi-workspace environments and maintain their consistency.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]
# qqq : better classification is necessary

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
# use_alloc = [ "no_std" ]
enabled = []

[dependencies]
willbe = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
assert_fs = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.114"
serde = "1.0"
assert_cmd = "2.0"
petgraph = "~0.6"
cargo_metadata = "~0.14"
