[package]
name = "file_tools"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/file_tools"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/file_tools"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/file_tools"
description = """
Collection of algorithms and structures to handle files properly.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = [ "no_std" ]
enabled = []

[dependencies]

[dev-dependencies]
test_tools = { workspace = true }
