[package]
name = "fundamental_data_type"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/fundamental_data_type"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/fundamental_data_type"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/fundamental_data_type"
description = """
A collection of derive macros designed to enhance STD.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [
  "derive_tools/default",
]
full = [
  "derive_tools/full",
]
no_std = []
use_alloc = [ "no_std" ]
enabled = []

# qqq : reexport features of depdendencies

[dependencies]
derive_tools = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
