[package]
name = "instance_of"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/instance_of"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/instance_of"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/instance_of"
description = """
Macro to answer the question: does it implement a trait?
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/typing/instance_of_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = [ "no_std" ]
enabled = []

[lib]
name = "instance_of"
path = "src/typing/instance_of_lib.rs"

[[test]]
name = "instance_of_test"
path = "tests/instance_of_tests.rs"

[[test]]
name = "instance_of_smoke_test"
path = "tests/smoke_test.rs"

[[example]]
name = "instance_of_trivial"
path = "examples/instance_of_trivial/src/main.rs"

[dependencies]
implements = { workspace = true }

[dev-dependencies]
# trybuild = { version = "~1.0", features = [ "diff" ] }
test_tools = { workspace = true }
