[package]
name = "multilayer"
version = "0.1.3"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/multilayer"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/multilayer"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/multilayer"
description = """
Protocol of modularity unifying interface of a module and introducing layers.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "builder-pattern" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/meta/mod_interface/front/multilayer_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = [ "no_std" ]
enabled = []

[lib]
name = "multilayer"
path = "src/meta/mod_interface/front/multilayer_lib.rs"

[[test]]
name = "mod_interface_test"
path = "tests/multilayer_tests.rs"

[[test]]
name = "mod_interface_smoke_test"
path = "tests/smoke_test.rs"

# [[example]]
# name = "multilayer_trivial"
# path = "examples/multilayer_trivial/src/main.rs"

[dependencies]
mod_interface = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
