[package]
name = "proc_macro_tools"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/macro_tools"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/macro_tools"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/macro_tools"
description = """
Tools for writing procedural macroses.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

exclude = ["/tests", "/example", "-*"]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = [ "no_std" ]
enabled = ["macro_tools/enabled"]

[dependencies]
macro_tools = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }

