[package]
name = "werror"
version = "0.4.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/werror"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/werror"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/werror"
description = """
Basic exceptions handling mechanism.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

# = features

[features]
default = [
  "enabled",
  "error_for_lib",
  "error_for_app"
]
full = [
  "enabled",
  "error_for_lib",
  "error_for_app"
]
no_std = [ "error_tools/no_std" ]
use_alloc = [ "error_tools/use_alloc" ]
enabled = [ "error_tools/enabled" ]

error_for_lib = [
  "error_tools/error_for_lib"
]
error_for_app = [
  "error_tools/error_for_app"
]

[dependencies]
error_tools = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
