[package]
name = "winterval"
version = "0.3.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/winterval"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/winterval"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/winterval"
description = """
Interval adapter for both open/closed implementations of intervals ( ranges ).
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

# exclude = [ "/tests", "/examples", "-*" ]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = [ "interval_adapter/enabled" ]
no_std = []
use_alloc = [ "no_std" ]

[dependencies]
interval_adapter = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
