[package]
name = "wproc_macro"
version = "0.1.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wproc_macro"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/wproc_macro"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/wproc_macro"
description = """
Tools for writing procedural macroses.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]
macro_tools = { workspace = true }

[dev-dependencies]
# trybuild = { version = "~1.0", features = [ "diff" ] }
test_tools = { workspace = true }
