[package]
name = "wstring_tools"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wstring_tools"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/wstring_tools"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/wstring_tools"
description = """
Tools to manipulate strings.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/wstring_tools_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [
  "indentation",
  # "isolate",
  # "parse_request",
  # "split",
  "parse_number",
]
full = [
  "indentation",
  # "isolate",
  # "parse_request",
  # "split",
  "parse_number",
]
# use_std = [ "strs_tools/use_std" ]
no_std = [ "strs_tools/no_std" ]
use_alloc = [ "strs_tools/use_alloc" ]

indentation = [ "strs_tools/string_indentation" ]
isolate = [ "strs_tools/string_isolate" ]
parse_request  = [ "split", "isolate", "strs_tools/string_parse_request" ]
parse_number = [ "strs_tools/string_parse_number" ]
split = [ "strs_tools/string_split" ]

# [lib]
# name = "wstring_tools"
# path = "src/string/wstring_tools_lib.rs"

# [[test]]
# name = "string_test"
# path = "tests/string/wstring_tools_tests.rs"

# [[test]]
# name = "string_smoke_test"
# path = "tests/_integration_test/smoke_test.rs"

# [[example]]
# name = "wstring_tools_trivial"
# path = "examples/strs_tools_trivial/src/main.rs"

[dependencies]
strs_tools = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
