[package]
name = "wtest"
version = "0.4.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wtest"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/wtest"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/wtest"
description = """
Tools for writing and running tests.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false
# exclude = [ "/tests", "/examples", "-*" ]
include = [
  "/rust/impl/test",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = [ "no_std" ]
enabled = []

[dependencies]
test_tools = { workspace = true }
# wtools = { workspace = true }
# wca = { workspace = true }
# wpublisher = { workspace = true }
# anyhow = "~1.0.56"

[dev-dependencies]
# trybuild = { version = "~1.0", features = [ "diff" ] }
