[package]
name = "wtest_basic"
version = "0.4.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wtest_basic"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/wtest_basic"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/wtest_basic"
description = """
Tools for writing tests. The most basic things.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/test/wtest_basic_lib.rs",
  "/rust/impl/test/basic",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "test_tools/default" ]
full = [ "test_tools/full" ]
no_std = [ "test_tools/no_std" ]
use_alloc = [ "test_tools/use_alloc" ]
enabled = [ "test_tools/enabled" ]
# nightly = [ "test_tools/nightly" ]

# [lib]
# name = "wtest_basic"
# path = "src/test/wtest_basic_lib.rs"
#
# [[test]]
# name = "wtest_basic_test"
# path = "tests/test/wtest_basic_tests.rs"
#
# [[test]]
# name = "wtest_basic_smoke_test"
# path = "tests/_integration_test/smoke_test.rs"
#
# [[example]]
# name = "wtest_basic_trivial"
# path = "examples/wtest_basic_trivial/src/main.rs"

[dependencies]

test_tools = { workspace = true, default-features = true }

# ## external
#
# paste = "~1.0"
# rustversion = "~1.0"
# anyhow = "~1.0"
# num-traits = "~0.2"
# trybuild = { version = "~1.0", features = [ "diff" ] }
#
# ## internal
#
# meta_tools = { workspace = true, features = [ "full" ] }
# mem_tools = { workspace = true, features = [ "full" ] }
# typing_tools = { workspace = true, features = [ "full" ] }
# data_type = { workspace = true, features = [ "full" ] }
# diagnostics_tools = { workspace = true, features = [ "full" ] }

[dev-dependencies]
test_tools = { workspace = true }
