[package]
name = "draw_lang"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/draw_lang"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/draw_lang"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/draw_lang"
description = """
Draw language.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]
test_tools = { workspace = true }
