[package]
name = "willbe_old"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/willbe"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/willbe_old"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/willbe_old"
description = """
___
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false
# exclude = [ "/tests", "/examples", "-*" ]
include = [
  "/rust/impl/willbe_old",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = [ "no_std" ]
enabled = []

[lib]
name = "willbe_old"
path = "src/willbe_old/willbe_lib.rs"

[[bin]]
name = "willbe_old"
path = "src/willbe_old/willbe_entry.rs"

[[test]]
name = "willbe_test"
path = "tests/willbe_old/willbe_test.rs"

# disable for now
# [[test]]
# name = "willbe_smoke_test"
# path = "tests/_integration_test/smoke_test.rs"
#
# [[example]]
# name = "willbe_trivial"
# path = "examples/willbe_trivial/src/main.rs"

[dependencies]
wtools = { workspace = true }
wca = { workspace = true }
mod_interface = { workspace = true, features = [ "default" ] }
iter_tools = { workspace = true, features = [ "default" ] }
error_tools = { workspace = true, features = [ "default" ] }
toml = "0.5"
globwalk = "0.8"
cargo_metadata = "0.15"
path-absolutize = "3"
petgraph = "~0.6"
rand = "0.8.4"

[dev-dependencies]
test_tools = { workspace = true }
tempfile = "3"
assert_cmd = "2.0"
predicates = "2.1"
