[package]
name = "wlang"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wlang"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/wlang"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/wlang"
description = """
Wlang.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false
# exclude = [ "/tests", "/examples", "-*" ]
include = [
  "/rust/impl/_blank",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = [ "no_std" ]
enabled = []

[dependencies]

[dev-dependencies]
test_tools = { workspace = true }
