[package]
name = "async_from"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/async_from"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/async_from"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/async_from"
description = """
Async version of From, Into, TryFrom, TryInto.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled", "async_from", "async_try_from" ]
full = [ "default" ]
enabled = []
async_from = []
async_try_from = []

[dependencies]
async-trait = { workspace = true }

[dev-dependencies]
# test_tools = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "time", "macros" ] }
